...
    android:background="@color/colorTeal"
    tools:context=".Activities.NewGameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/newGameActivity_ScrollView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newgameActivity_RelLayout">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newGameActivity_Hint"
                    android:src="@mipmap/ic_hint_transparent"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newGameActivity_Timer"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/newGameActivity_Skip"
                    android:src="@mipmap/ic_skip_transparent"
                    android:layout_alignParentRight="true"/>

                <TextView android:id="@+id/newGameActivity_PuzzleDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/newGameActivity_Hint"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

...
                    android:layout_height="wrap_content"
                    android:layout_below="@id/newGameActivity_Placeholder_18"
                    android:minWidth="0dp"
                    android:minHeight="0dp"/>

                <Button
                    android:id="@+id/newGameActivity_Placeholder_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/newGameActivity_Placeholder_19"
                    android:minWidth="0dp"
                    android:minHeight="0dp"/>

...
