<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTeal"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <ImageView
            android:id="@+id/mainMenuActivity_applicationImage"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/mainMenuActivity_applicationTitle"
            android:src="@mipmap/ic_appicon" />
        <TextView android:id="@+id/mainMenuActivity_applicationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:shadowColor="@color/colorWhite"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_main_drawer"
        app:headerLayout="@layout/nav_header_main"/>

</androidx.drawerlayout.widget.DrawerLayout>
