<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newgame"
            android:icon="@mipmap/ic_newgame_transparent"
            android:title="New Game" />
        <item
            android:id="@+id/nav_howtoplay"
            android:icon="@mipmap/ic_howtoplay_transparent"
            android:title="How to play" />
        <item
            android:id="@+id/nav_highscore"
            android:icon="@mipmap/ic_high_score"
            android:title="High score" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_transparent"
            android:title="Settings" />
    </group>

</menu>
