<resources>
    <string name="app_name">Programmer Puzzle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="skip_puzzle_confirm">Are you sure you want to skip this puzzle and move on to the next one?</string>
    <string name="back_button_confirm">Are you sure you want to quit to main menu?</string>
    <string name="time_expired_ok_text">Go next!</string>
    <string name="time_expired_text">Unfortunately, your time expired.</string>
    <string name="puzzle_completed_text">Well done!</string>

    <string name="howToPlayActivity_Text1">The goal of every puzzle is to move every singular button provided at the top, to the correct lines provided at the bottom of the screen. You are provided with a short description of the puzzle, it is advised to read carefully. You can move the buttons back and forth by tapping on them. Tapping on a button will move it to the next available line. Tapping on a button if it has already been moved to a line will move it back to it\'s original position at the top. Some buttons have fixed positions when starting a puzzle, those have grey texts in them. Many of the puzzles are quite hard, but there is plenty of time to think, and if you need help, use this:</string>
    <string name="howToPlayActivity_Text2">This button will do one of two things. If the buttons you already moved are correct, it will move a single button to the next line, which will be guaranteed to be at the correct position. If your work so far is incorrect however, it will move back every button that is in incorrect position. Be careful, this option is available once per puzzle. If the puzzle is too hard or uninteresting, you can move to the next one by using the following:</string>
    <string name="howToPlayActivity_Text3">This button will load the next puzzle for you. There are 5 puzzles in a single game, at the end you will receive a score based on how well you did. Only 100% completed puzzles give score. The programming language for the puzzles can be changed in the settings.</string>

    <string name="Player">Player</string>
    <string name="Score">Score</string>

</resources>
